--- a/mvc-updates.cabal
+++ b/mvc-updates.cabal
@@ -27,10 +27,9 @@ Source-Repository head
 Library
     Hs-Source-Dirs: src
     Build-Depends:
-        base             >= 4       && < 5  ,
-        async            >= 2.0.0   && < 2.1,
-        foldl            >= 1.0.0   && < 1.1,
-        mvc              >= 1.0.0   && < 1.1,
-        transformers     >= 0.2.0.0 && < 0.5
+        base  >= 4     && < 5  ,
+        async >= 2.0.0 && < 2.1,
+        foldl >= 1.0.0 && < 1.1,
+        mvc   >= 1.0.0 && < 1.1
     Exposed-Modules: MVC.Updates
     GHC-Options: -O2 -Wall
