Revert "Updated documentation"
This reverts commit 9e0d1f83f74ebfb59f07f82eaa1d3717a7e9dafc.

--- a/mvc-updates.cabal
+++ b/mvc-updates.cabal
@@ -9,8 +9,8 @@ Author: Gabriel Gonzalez
 Maintainer: Gabriel439@gmail.com
 Bug-Reports: https://github.com/Gabriel439/Haskell-MVC-Updates-Library/issues
 Synopsis: Concurrent and combinable updates
-Description: Use the @mvc-updates@ library to build programs with multiple
-  continously updating inputs where you can attach listeners to updates.
+Description: Use the @mvc-updates@ library to build programs with continously
+  updating inputs.
   .
   Key features include:
   .
