--- a/mvc-updates.cabal
+++ b/mvc-updates.cabal
@@ -30,6 +30,6 @@ Library
         base  >= 4     && < 5  ,
         async >= 2.0.0 && < 2.1,
         foldl >= 1.0.6 && < 1.1,
-        mvc   >= 1.0.0 && < 1.1
+        mvc               < 1.1
     Exposed-Modules: MVC.Updates
     GHC-Options: -O2 -Wall
