--- a/mvc-updates.cabal
+++ b/mvc-updates.cabal
@@ -29,7 +29,7 @@ Library
     Build-Depends:
         base  >= 4     && < 5  ,
         async >= 2.0.0 && < 2.1,
-        foldl >= 1.0.6 && < 1.1,
-        mvc               < 1.1
+        foldl >= 1.1.0 && < 1.2,
+        mvc   >= 1.1.0 && < 1.2
     Exposed-Modules: MVC.Updates
     GHC-Options: -O2 -Wall
